--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,14 @@ body {
     text-decoration: none;
 }
 
+.user-link {
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+
 .user-favorites-num {
     font-size: 10px;
     line-height: 10px;
@@ -38,4 +46,92 @@ body {
     background-color: #7db54f;
     border-radius: 50%;
     padding: 5px;
+}
+
+.navigation-button {
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+    background-color: #756157;
+    border-radius: 4px;
+    text-decoration: none;
+    padding: 8px;
+}
+
+.hero {
+    background-image: url("../images/hero/index-background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #82b3d3;
+}
+
+.subtitle {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.description-subtitle {
+    font-size: 22px;
+    line-height: 26px;
+}
+
+.advantages-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.advantages-description {
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.services-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.services-description {
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.color-basic {
+    color: #ffffff;
+    background-color: rgba(131, 179, 211, 1);
+}
+
+.color-light {
+    background-color: rgba(131, 179, 211, 0.12);
+}
+
+.color-pale {
+    background-color: rgba(131, 179, 211, 0.2);
+}
+
+.interested-button {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    color: #ffffff;
+    background-color: #756157;
+    border-radius: 4px;
+    text-decoration: none;
+    padding: 8px;
+    text-transform: uppercase;
+}
+
+.subscribe-field {
+    font-size: 18px;
+    line-height: 24px;
 }
