--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,8 @@ body {
 }
 
 .navigation-link {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
     font-size: 20px;
     line-height: 24px;
     color: #000000;
@@ -32,6 +34,8 @@ body {
 }
 
 .user-link {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
     font-size: 20px;
     line-height: 24px;
     color: #000000;
@@ -49,7 +53,7 @@ body {
 }
 
 .navigation-button {
-
+    font-family: "PT Sans", sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
@@ -65,6 +69,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #82b3d3;
+    color: #ffffff;
 }
 
 .subtitle {
@@ -107,8 +112,12 @@ body {
 }
 
 .color-basic {
-    color: #ffffff;
     background-color: rgba(131, 179, 211, 1);
+    color: #ffffff;
+}
+
+.color-basic .advantages-title {
+    color: #ffffff;
 }
 
 .color-light {
@@ -120,6 +129,7 @@ body {
 }
 
 .interested-button {
+    font-family: "PT Sans", sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 36px;
@@ -131,7 +141,94 @@ body {
     text-transform: uppercase;
 }
 
+.subscribe-bg {
+    background-image: url("../images/subscribe.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #82b3d3;
+    color: #ffffff;
+}
+
+.subscribe-bg .subtitle {
+    color: #ffffff;
+}
+
 .subscribe-field {
     font-size: 18px;
+    line-height: 24px;
+}
+
+.subscribe-button {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    color: #ffffff;
+    background-color: #82b3d3;
+    border: #ffffff;
+    border-radius: 4px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.socials-link {
+    font-family: "PT Sans", sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+
+.phone {
+    font-family: "PT Sans", sans-serif;
+    font-size: 40px;
+    line-height: 40px;
+    color: #000000;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+
+.copyright-logo {
+    font-family: "PT Sans", sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    background-color: #ffffff;
+    text-decoration: none;
+}
+
+.catalog-header {
+    background-image: url("../images/filter.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #82b3d3;
+    color: #ffffff;
+}
+
+.catalog-heading {
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 78px;
+}
+
+.breadcrumbs {
+    font-family: "PT Sans", sans-serif;
+    font-size: 16px;
+    line-height: 21px;
+}
+
+.breadcrumbs-link {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/catalog-filter-group {
+    border: ;
+}
+
+.catalog-filter-title {
+    font-weight: 700;
+    font-size: 20px;
     line-height: 24px;
 }
