--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,6 +156,11 @@ body {
 .subscribe-field {
     font-size: 18px;
     line-height: 24px;
+    border: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: rgba(242, 242, 242, 1);
+    padding: 14px;
 }
 
 .subscribe-button {
@@ -165,10 +170,12 @@ body {
     line-height: 36px;
     color: #ffffff;
     background-color: #82b3d3;
-    border: #ffffff;
-    border-radius: 4px;
-    text-decoration: none;
+    border: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     text-transform: uppercase;
+    padding: 8px;
+
 }
 
 .socials-link {
@@ -198,6 +205,9 @@ body {
     text-decoration: none;
 }
 
+.catalog-filter-group {
+    border: 0;
+}
 .catalog-header {
     background-image: url("../images/filter.jpg");
     background-size: cover;
@@ -223,12 +233,40 @@ body {
     text-decoration: none;
 }
 
-/catalog-filter-group {
-    border: ;
-}
-
 .catalog-filter-title {
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+   }
+
+.control-input {
+    font-size: 18px;
+    line-height: 23px;
+    background-color: rgba(242, 242, 242, 1);
+}
+
+.cost {
+    font-weight: 700;
+    line-height: 24px;
+    color: #000000;
+}
+
+.button-filter {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+    border: 0;
+    border-radius: 4px;
+    text-transform: uppercase;
+    padding: 8px;
+}
+
+.apply {
+    background-color: rgba(130, 179, 211, 1);
+}
+
+.reset {
+    background-color: rgba(130, 179, 211, 0);
 }
