--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,7 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
+    text-transform: uppercase;
     color: #ffffff;
     background-color: #756157;
     border-radius: 4px;
@@ -251,6 +252,16 @@ body {
     color: #000000;
 }
 
+.from {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.to {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 .button-filter {
     font-family: "PT Sans", sans-serif;
     font-weight: 700;
@@ -269,4 +280,107 @@ body {
 
 .reset {
     background-color: rgba(130, 179, 211, 0);
+}
+
+.select-control {
+    font-family: "PT Sans", sans-serif;
+    font-size: 18px;
+    line-height: 21px;
+    color: #333333;
+    padding: 14px;
+}
+
+.button-show {
+    font-family: "PT Sans", sans-serif;
+    font-size: 18px;
+    line-height: 21px;
+    text-decoration: none;
+    color: #333333;
+    padding: 14px;
+}
+
+.product-item {
+    width: 340px;
+}
+
+.product-link {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    text-decoration: none;
+    color: #000000;
+}
+
+.product-type {
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.product-price {
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.product-more {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #756157;
+    border-radius: 4px;
+    text-decoration: none;
+    padding: 8px;
+}
+
+.product-to-favorites {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+    background-color: #82b3d3;
+    border: 0;
+    border-radius: 4px;
+    text-transform: uppercase;
+    padding: 8px;
+}
+
+.product-in-favorites {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+    background-color: #7db54f;
+    border: 0;
+    border-radius: 4px;
+    text-transform: uppercase;
+    padding: 8px;
+}
+
+.product-raiting {
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    background-color: #f2f2f2;
+    border-radius: 4px;
+    padding: 8px;
+}
+
+.pagination-link {
+    font-family: "PT Sans", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #82b3d3;
+}
+
+.pagination-link.pagination-current {
+    color: #000000;
+    background-color: #f2f2f2;
 }
