--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,7 +179,7 @@ body {
     border: 0;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    background-color: rgba(242, 242, 242, 1);
+    background-color: #f2f2f2;
     padding: 14px;
 }
 
@@ -263,7 +263,7 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 23px;
-    background-color: rgba(242, 242, 242, 1);
+    background-color: #f2f2f2;
 }
 
 .cost {
