--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
+
 }
 
 .main-container {
@@ -48,11 +50,14 @@ body {
 }
 
 .logo {
-  margin-right: 30px;
+  width: 140px;
+  margin-right: 28px;
 }
 
 .navigation {
-  margin-right: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navigation-link {
@@ -137,6 +142,24 @@ body {
     line-height: 21px;
 }
 
+.advantages-list {
+  width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.advantages-item {
+  width: 400px;
+}
+
+.advantages-item-picture {
+  width: 1200px;
+  display: flex;
+}
+
 .services {
     text-align: center;
 }
@@ -170,6 +193,19 @@ body {
 
 .color-pale {
     background-color: rgba(131, 179, 211, 0.2);
+}
+
+.services-list {
+  width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.services-item {
+  width: 400px;
 }
 
 .interested {
