--- a/styles/styles.css
+++ b/styles/styles.css
@@ -185,7 +185,6 @@ body {
 }
 
 .advantages-list {
-
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -197,9 +196,13 @@ body {
   width: 400px;
 }
 
-.advantages-item-picture {
-  width: 1200px;
+.advantage-image {
+  width: 800px;
   height: auto;
+  object-fit: contain;
+}
+
+.advantages-item-picture {
   display: flex;
 }
 
@@ -309,6 +312,13 @@ body {
   padding: 8px;
 }
 
+.socials-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .socials-link {
   font-weight: 400;
   font-size: 20px;
@@ -338,7 +348,7 @@ body {
 
 .page-footer {
   width: 1060px;
-  margin: 40px 70px 30px 70px;
+  padding: 40px 70px 30px 70px;
   display: flex;
   justify-content: space-between;
 }
@@ -453,7 +463,6 @@ body {
   line-height: 21px;
   text-decoration: none;
   color: #333333;
-  padding: 14px;
 }
 
 .catalog-products {
@@ -470,26 +479,22 @@ body {
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0px;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .product-item {
   width: 340px;
-  display: flex;
-  flex-direction: column;
   border: 1px solid #e6e6e6;
   margin: 0px;
-  margin-bottom: 20px;
   list-style: none;
-}
-
-.product-card {
-  width: 300px;
-  margin: auto;
+  box-sizing: border-box;
 }
 
 .product-link {
+  display: flex;
+  flex-direction: column;
   text-decoration: none;
 }
 
@@ -499,6 +504,7 @@ body {
   line-height: 28px;
   color: #000000;
   order: -1;
+  b
 }
 
 .product-type {
@@ -564,6 +570,10 @@ body {
 .pagination {
   width: 1060px;
   display: flex;
+}
+
+.pagination-item {
+  display: block;
 }
 
 .pagination-link {
