--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,6 +449,7 @@ body {
 }
 
 .breadcrumbs {
+  display: flex;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
@@ -475,23 +476,23 @@ body {
   list-style: none;
 }
 
-/* Отступы в фильтрах будут установлены в следующем разделе
 .infrastructure {
   margin-right: 70px;
 }
 
 .housing-type {
-  margin-right: 140px;
+  margin-right: auto;
 }
 
 .cost {
-  margin-right: 70px;
+  min-width: 288px;
 }
 
-.buttons-filter {
-  margin-left: auto;
-  text-align: end;
-}*/
+.filter-buttons {
+  width: 191px;
+  margin-left: 70px;
+  align-self: end;
+}
 
 .catalog-filter-title {
   font-weight: 700;
@@ -509,12 +510,8 @@ body {
   list-style: none;
 }
 
-.catalog-filter-item {
+.catalog-filter-item:not(:last-child) {
   margin-bottom: 16px;
-}
-
-.catalog-filter-item:last-child {
-  margin: 0;
 }
 
 .control-input {
@@ -542,7 +539,7 @@ body {
   border-bottom-right-radius: 4px;
 }
 
-.button-filter {
+.filter-button {
   width: 191px;
   font-family: inherit;
   font-weight: 700;
@@ -558,6 +555,7 @@ body {
 
 .apply {
   background-color: #82b3d3;
+  margin-bottom: 32px;
 }
 
 .reset {
@@ -616,6 +614,7 @@ body {
   margin: 0px;
   list-style: none;
   box-sizing: border-box;
+  padding: 20px;
 }
 
 .product-link {
@@ -629,8 +628,16 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  order: -1;
+  order: 1;
+  padding: 16px 0;
   margin: 0;
+}
+
+.product-type-price {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 .product-type {
@@ -643,6 +650,13 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+}
+
+.product-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 .product-more {
@@ -683,6 +697,12 @@ body {
   padding: 8px;
 }
 
+.product-category {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
 .product-rating {
   font-weight: 400;
   font-size: 16px;
@@ -709,6 +729,7 @@ body {
 
 .pagination-link {
   display: block;
+  box-sizing: border-box;
   min-width: 60px;
   font-weight: 700;
   font-size: 20px;
@@ -722,6 +743,7 @@ body {
 
 .pagination-ellipsis {
   display: block;
+  box-sizing: border-box;
   min-width: 60px;
   font-weight: 700;
   font-size: 20px;
