--- a/7/styles/styles.css
+++ b/7/styles/styles.css
@@ -14,18 +14,16 @@
   font-display: swap;
 }
 
-/*.visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
+  border: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-}*/
+}
 
 html {
   height: 100%;
@@ -62,9 +60,12 @@ body {
 
 .navigation {
   display: flex;
+  align-items: center;
+  margin-bottom: 0;
 }
 
 .logo {
+  display: block;
   width: 140px;
   margin-right: 28px;
 }
@@ -78,17 +79,15 @@ body {
   margin-right: auto;
 }
 
-.navigation-item {
-  padding: 20px 16px;
-}
-
 .navigation-link {
+  display: block;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
+  padding: 20px 16px;
 }
 
 .user-list {
@@ -99,23 +98,23 @@ body {
   list-style: none;
 }
 
-.user-item {
-  width: 44px;
-  padding: 22px 12px;
-}
-
 .user-item-button {
-  padding: 14px 0px 14px 20px;
+  padding: 14px 0 14px 20px;
 }
 
 .user-link {
+  min-width: 44px;
+  min-height: 64px;
+  display: block;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
- }
+  padding: 22px 12px;
+  box-sizing: border-box;
+}
 
 .user-favorites-num {
   font-weight: 400;
@@ -124,6 +123,7 @@ body {
   color: #ffffff;
   background-color: #7db54f;
   border-radius: 50%;
+  margin: 0;
   padding: 5px;
 }
 
@@ -139,17 +139,26 @@ body {
   border-radius: 4px;
   text-decoration: none;
   text-align: center;
-  padding: 8px;
+  padding: 8px 0;
 }
 
 .hero {
   width: 1200px;
+  min-height: 485px;
   background-image: url("../images/hero/index-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   color: #ffffff;
   background-color: #5582a0;
   text-align: center;
+}
+
+.hero-title {
+  width: 458px;
+  margin: 0;
+  padding-top: 51px;
+  padding-bottom: 82px;
+  margin-bottom: ;
 }
 
 .advantages {
@@ -162,30 +171,44 @@ body {
   line-height: 36px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+}
+
+.advantages-subtitle {
+  margin-top: 69px;
+  margin-bottom: 25px;
 }
 
 .description-subtitle {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+
 }
 
-.advantages-title {
+.advantages-description-subtitle {
+  margin-top: 0;
+  margin-bottom: 90px;
+}
+
+.advantages-heading {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 62px;
 }
 
 .advantages-description {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  margin: 0;
 }
 
 .advantages-list {
-
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -197,9 +220,23 @@ body {
   width: 400px;
 }
 
-.advantages-item-picture {
-  width: 1200px;
+.description-element {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  min-height: 385px;
+  padding: 0 85px;
+  box-sizing: border-box;
+}
+
+.advantage-image {
+  width: 800px;
   height: auto;
+  object-fit: contain;
+}
+
+.advantages-item-picture {
   display: flex;
 }
 
@@ -207,7 +244,17 @@ body {
   text-align: center;
 }
 
-.services-title {
+.services-subtitle {
+  margin-top: 64px;
+  margin-bottom: 20px;
+}
+
+.services-description-subtitle {
+  margin-top: 0;
+  margin-bottom: 64px;
+}
+
+.services-heading {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -226,7 +273,7 @@ body {
   color: #ffffff;
 }
 
-.color-basic .advantages-title {
+.color-basic .advantages-heading {
   color: #ffffff;
 }
 
@@ -253,9 +300,21 @@ body {
 
 .interested {
   text-align: center;
+  padding: 96px 304px;
+}
+
+.interested-subtitle {
+  margin-bottom: 20px;
+}
+
+.interested-description-subtitle {
+  margin-top: 0;
+  margin-bottom: 54px;
 }
 
 .interested-button {
+  display: block;
+  width: 376px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -265,10 +324,22 @@ body {
   text-decoration: none;
   padding: 8px;
   text-transform: uppercase;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .subscribe {
-    text-align: center;
+  text-align: center;
+  padding: 96px 258px 104px;
+}
+
+.subscribe-subtitle {
+  margin-bottom: 20px;
+}
+
+.subscribe-description-subtitle {
+  margin-top: 0;
+  margin-bottom: 54px;
 }
 
 .subscribe-bg {
@@ -306,7 +377,17 @@ body {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   text-transform: uppercase;
-  padding: 8px;
+  padding: 8px 50px;
+}
+
+.socials-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  max-width: 142px;
 }
 
 .socials-link {
@@ -316,6 +397,13 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
+  width: 48px;
+  height: 40px;
+  margin-right: 8px;
+}
+
+.socials-link:nth-child(3) {
+  margin-right: 8px;
 }
 
 .phone {
@@ -337,33 +425,38 @@ body {
 }
 
 .page-footer {
-  width: 1060px;
-  margin: 40px 70px 30px 70px;
+  padding: 40px 70px 30px 70px;
   display: flex;
   justify-content: space-between;
 }
 
-.catalog-filter-group {
-  border: none;
-}
 .catalog-header {
   background-image: url("../images/filter.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #5582a0;
   color: #ffffff;
+  padding: 35px 70px 70px;
 }
 
 .catalog-heading {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
 }
 
 .breadcrumbs {
+  display: flex;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 40px;
 }
 
 .breadcrumbs-link {
@@ -371,11 +464,55 @@ body {
   text-decoration: none;
 }
 
+.catalog-filter {
+  margin: auto;
+  display: flex;
+}
+
+.catalog-filter-group {
+  border: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.infrastructure {
+  margin-right: 70px;
+}
+
+.housing-type {
+  margin-right: auto;
+}
+
+.cost {
+  min-width: 288px;
+}
+
+.filter-buttons {
+  width: 191px;
+  margin-left: 70px;
+  align-self: end;
+}
+
 .catalog-filter-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-   }
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 32px;
+}
+
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 16px;
+}
 
 .control-input {
   font-family: inherit;
@@ -385,7 +522,8 @@ body {
   background-color: #f2f2f2;
 }
 
-.cost {
+.cost-field {
+  width: 143px;
   font-weight: 700;
   line-height: 24px;
   color: #000000;
@@ -401,7 +539,8 @@ body {
   border-bottom-right-radius: 4px;
 }
 
-.button-filter {
+.filter-button {
+  width: 191px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -410,31 +549,30 @@ body {
   border: 0;
   border-radius: 4px;
   text-transform: uppercase;
-  padding: 8px;
+  text-align: center;
+  padding: 8px 0;
 }
 
 .apply {
   background-color: #82b3d3;
+  margin-bottom: 32px;
 }
 
 .reset {
   background-color: transparent;
 }
 
+.catalog-products {
+  padding: 0 70px;
+}
+
 .sorting {
-  width: 1060px;
   display: flex;
+  margin: 50px 0 40px;
 }
 
-.catalog-title {
-  width: 1060px;
-  margin: auto;
-}
-
-.catalog-filter {
-  width: 1060px;
-  margin: auto;
-  display: flex;
+.sorting .subtitle {
+  align-self: center;
 }
 
 .select-control {
@@ -453,12 +591,6 @@ body {
   line-height: 21px;
   text-decoration: none;
   color: #333333;
-  padding: 14px;
-}
-
-.catalog-products {
-  width: 1060px;
-  margin: auto;
 }
 
 .select-control {
@@ -470,26 +602,24 @@ body {
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0px;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 80px;
 }
 
 .product-item {
   width: 340px;
-  display: flex;
-  flex-direction: column;
   border: 1px solid #e6e6e6;
   margin: 0px;
-  margin-bottom: 20px;
   list-style: none;
-}
-
-.product-card {
-  width: 300px;
-  margin: auto;
+  box-sizing: border-box;
+  padding: 20px;
 }
 
 .product-link {
+  display: flex;
+  flex-direction: column;
   text-decoration: none;
 }
 
@@ -498,7 +628,16 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  order: -1;
+  order: 1;
+  padding: 16px 0;
+  margin: 0;
+}
+
+.product-type-price {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 .product-type {
@@ -511,6 +650,13 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+}
+
+.product-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 .product-more {
@@ -551,6 +697,12 @@ body {
   padding: 8px;
 }
 
+.product-category {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
 .product-rating {
   font-weight: 400;
   font-size: 16px;
@@ -564,15 +716,40 @@ body {
 .pagination {
   width: 1060px;
   display: flex;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+}
+
+.pagination-item {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .pagination-link {
+  display: block;
+  box-sizing: border-box;
+  min-width: 60px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   text-decoration: none;
   color: #ffffff;
   background-color: #82b3d3;
+  text-align: center;
+  padding: 12px 0;
+}
+
+.pagination-ellipsis {
+  display: block;
+  box-sizing: border-box;
+  min-width: 60px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  padding: 12px 0;
 }
 
 .pagination-current {
