--- a/styles/styles.css
+++ b/styles/styles.css
@@ -403,14 +403,23 @@ body {
   padding: 8px 50px;
 }
 
+.page-footer {
+  padding: 40px 70px 30px 70px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .socials-list {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-left: auto;
-  max-width: 142px;
+}
+
+.socials-item {
+  width: 48px;
+  height: 40px;
 }
 
 .socials-link {
@@ -445,12 +454,10 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-}
-
-.page-footer {
-  padding: 40px 70px 30px 70px;
-  display: flex;
-  justify-content: space-between;
+  width: 115px;
+  height: 35px;
+  align-self: center;
+  display: block;
 }
 
 .catalog-header {
@@ -595,6 +602,7 @@ body {
 
 .sorting {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .sorting .subtitle {
@@ -607,7 +615,21 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  padding: 14px;
+  padding: 10px 14px;
+  min-width: 292px;
+  min-height: 49px;
+  margin-left: auto;
+  margin-right: 70px;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.button-show-list{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 8px;
 }
 
 .button-show {
@@ -617,21 +639,31 @@ body {
   line-height: 21px;
   text-decoration: none;
   color: #333333;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  width: 48px;
+  height: 48px;
+  display: block;
 }
 
-.select-control {
-  height: 49px;         /*Нужно ли указывать высоту рамки вокруг сортировки? Это flex элемент*/
-  margin-left: auto;
-  margin-right: 70px;
+.button-show-active {
+  border: 2px solid #000000;
 }
 
-.product-list {
+/*.product-list {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   margin: 0;
   padding: 40px 0 80px;
+}*/
 
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
+  margin: 0;
+  padding: 40px 0 80px;
 }
 
 .product-item {
@@ -641,11 +673,11 @@ body {
   list-style: none;
   box-sizing: border-box;
   padding: 20px;
+  display: grid;
+  grid-template-rows: 212px min-content min-content min-content min-content;
 }
 
 .product-link {
-  display: flex;
-  flex-direction: column;
   text-decoration: none;
 }
 
@@ -662,6 +694,7 @@ body {
 .product-image {
   width: 300px;
   height: auto;
+  display: block;
 }
 
 .product-type-price {
@@ -748,8 +781,13 @@ body {
   text-transform: uppercase;
   background-color: #f2f2f2;
   border-radius: 4px;
-  padding: 8px 0;
+  padding: 9px 0 8px;
+  text-align: center;
   display: block;
+  width: 140px;
+}
+
+.stars {
   width: 140px;
 }
 
@@ -766,7 +804,7 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-}
+ }
 
 .pagination-link {
   display: block;
@@ -779,7 +817,7 @@ body {
   color: #ffffff;
   background-color: #82b3d3;
   text-align: center;
-  padding: 12px 0;
+  padding: 12px 12px;
   border-radius: 4px;
 }
 
