--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,18 @@ body {
   box-sizing: border-box;
 }
 
+.user-link-search {
+  background-image: url("../images/header/search.svg");
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+}
+
+.user-link-favorites {
+  background-image: url("../images/header/likes.svg");
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+}
+
 .user-favorites-num {
   font-weight: 400;
   font-size: 10px;
@@ -497,6 +509,8 @@ body {
 .catalog-filter {
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
+  gap: 70px;
 }
 
 .catalog-filter-group {
@@ -504,10 +518,6 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-.infrastructure {
-  margin-right: 70px;
 }
 
 .housing-type {
@@ -569,7 +579,6 @@ body {
 
 .filter-buttons {
   width: 191px;
-  margin-left: 70px;
   align-self: end;
 }
 
@@ -621,6 +630,7 @@ body {
   margin-left: auto;
   margin-right: 70px;
   box-sizing: border-box;
+  border: 2px solid #e5e5e5;
   border-radius: 4px;
 }
 
@@ -650,14 +660,6 @@ body {
   border: 2px solid #000000;
 }
 
-/*.product-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin: 0;
-  padding: 40px 0 80px;
-}*/
-
 .product-list {
   display: grid;
   grid-template-columns: repeat(3, 340px);
@@ -669,16 +671,20 @@ body {
 .product-item {
   width: 340px;
   border: 1px solid #e6e6e6;
-  margin: 0px;
+  margin: 0;
   list-style: none;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 19px;
   display: grid;
-  grid-template-rows: 212px min-content min-content min-content min-content;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 212px 1fr;
+  gap: 16px 20px;
+  align-items: start;
 }
 
 .product-link {
   text-decoration: none;
+  grid-column: 1/-1;
 }
 
 .product-title {
@@ -687,21 +693,20 @@ body {
   line-height: 28px;
   color: #000000;
   order: 1;
-  padding: 16px 0;
+  padding: 0;
   margin: 0;
+
+}
+
+.product-image-link {
+  grid-column: 1/-1;
 }
 
 .product-image {
   width: 300px;
   height: auto;
   display: block;
-}
-
-.product-type-price {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 0;
-  margin-bottom: 16px;
+  grid-column: 1/-1;
 }
 
 .product-type {
@@ -714,13 +719,7 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
-}
-
-.product-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 0;
-  margin-bottom: 16px;
+  text-align: end;
 }
 
 .product-more {
@@ -766,12 +765,6 @@ body {
   padding: 8px 0;
   display: block;
   width: 140px;
-}
-
-.product-category {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
 }
 
 .product-rating {
